añadido valor por default al ser empty

--- a/views/actividad/actividad-calificar-equipo.hbs
+++ b/views/actividad/actividad-calificar-equipo.hbs
@@ -36,7 +36,7 @@
                 <tr>
                     <th data-field="nombre" data-sorteable="true">Nombre del Equipo</th>
                     <th data-field="calificacion" id="calificacionEquipo" data-editable="true" data-editable-type="number"
-                        data-editable-min="0" data-editable-max="100">Calificación
+                        data-editable-min="0" data-editable-max="100" data-editable-emptytext="0">Calificación
                     </th>
                 </tr>
                 </thead>
@@ -56,7 +56,7 @@
                 <tr>
                     <th data-field="clave" data-sorteable="true">No. Control</th>
                     <th data-field="nombre" data-sorteable="true">Nombre del Alumno</th>
-                    <th data-field="calificacion" id="calificacionAlumno" data-editable="true" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación
+                    <th data-field="calificacion" id="calificacionAlumno" data-editable="true" data-editable-emptytext="0" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación
                     </th>
                 </tr>
                 </thead>
