--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -1,9 +1,11 @@
 <title>{{asignatura}} {{clave}} - Actividades - Seguimiento de Estudiantes</title>
-
+<div class="row-cols-1 p-2">
+    <h2 class="display-5">Actividades</h2>
+</div>
 <!-- Barra de navegación -->
-<div class="row m-2 p-2">
+<div class="row">
 
-    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
+    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block sidebar"
          role="navigation">
         <div class="sidebar-sticky pt-3 nav d-flex flex-column navbar-nav-scroll nav-fill">
             <ul class="list-group  border-bottom h-auto">
