--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -1,7 +1,10 @@
 <title>{{asignatura}} {{clave}} - Alumnos - Seguimiento de Estudiantes</title>
+<div class="row-cols-1 p-2">
+    <h2 class="display-5">Alumnos</h2>
+</div>
 <!-- Contenido de la vista -->
-<main class="row m-2 p-2 flex-grow-1 flex-shrink-0">
-    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
+<main class="row flex-grow-1 flex-shrink-0">
+    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block sidebar"
          role="navigation">
         <div class="sidebar-sticky pt-3 nav d-flex flex-column navbar-nav-scroll nav-fill">
             <div class="list-group list-group-flush border-bottom h-auto">
