--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -1,7 +1,10 @@
 <title>{{asignatura}} {{clave}} - Calificación - Seguimiento de Estudiantes</title>
+<div class="row-cols-1 p-2">
+    <h2 class="display-5">Calificaciones</h2>
+</div>
 
-<div class="row m-2 p-2 flex-grow-1 flex-shrink-0">
-    <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar navbar-nav-scroll">
+<div class="row flex-grow-1 flex-shrink-0">
+    <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block sidebar navbar-nav-scroll">
         <div class="sidebar-sticky ">
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                 Temas</h4>
@@ -17,16 +20,16 @@
 
     <!--col-md-9 ml-sm-auto col-lg-10 px-md-4-->
     <main class="col col-md col-xl col-sm col-lg" role="main">
-        <div id="toolbar">
+        <div class="fixed-table-toolbar" id="toolbar">
             <h3>Tema: {{tema.dataValues.nombre}} {{#iflogico title '===' 1}} - Segunda Oportunidad {{/iflogico}}</h3>
         </div>
-        <div class="row">
-            <div class="col navbar-nav-scroll">
+        <div class="row" >
+            <div class="col bootstrap4 bootstrap-table fixed-table-container fixed-height ">
                 <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
 
                 <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
                        data-search="true"
-                       data-advanced-search="true" data-filter-control="true" name="table">
+                       data-advanced-search="true" data-filter-control="true"  name="table">
                     <thead>
                     <tr>
                         <th data-field="clave" data-sorteable="false" class="column">Clave</th>
