--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -1,7 +1,9 @@
 <title>{{asignatura}} {{clave}} - Equipos - Seguimiento de Estudiantes</title>
-
-<div class="row m-2 p-2">
-    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
+<div class="row-cols-1 p-2">
+    <h2 class="display-5">Equipos</h2>
+</div>
+<div class="row">
+    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block sidebar"
          role="navigation">
         <div class="sidebar-sticky pt-3 nav d-flex flex-column navbar-nav-scroll nav-fill">
             <ul class="list-group  border-bottom h-auto">
