--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,6 +1,9 @@
 <title>{{asignatura}} {{clave}} - Inicio - Seguimiento de Estudiantes</title>
-<div class="row m-2 p-2 flex-grow-1 flex-shrink-0">
-    <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar navbar-nav-scroll">
+<div class="row-cols-1  m-2">
+    <h2 class="display-5">Inicio</h2>
+</div>
+<div class="row flex-grow-1 flex-shrink-0 ">
+    <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block sidebar navbar-nav-scroll">
         <div class="sidebar-sticky">
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                 Temas</h4>
@@ -48,7 +51,7 @@
             </div>
         </div>
         <div class="row-cols-1 m-2">
-            <p>Segunda oportunidad</p>
+            <p>Segunda oportunidad*</p>
         </div>
         <div class="row">
             <div class="col-4 col-md-5 col-xl-3 col-sm-4 col-lg-3">
