--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -9,7 +9,10 @@
 
 <title>{{asignatura}} {{clave}} - Temas - Seguimiento de Estudiantes</title>
 <!-- Contenido de la vista -->
-<div class="row m-2 p-2">
+<div class="row-cols-1 p-2">
+    <h2 class="display-5">Temas</h2>
+</div>
+<div class="row">
     <!-- Generación de un card por tema -->
     {{#each tema}}
         <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3">
