--- a/views/reporte/formulario-reporte-desercion.hbs
+++ b/views/reporte/formulario-reporte-desercion.hbs
@@ -10,6 +10,9 @@
     <div class="row-cols-1 m-2 p-2">
         <h2 class="display-6">Crear reporte parcial</h2>
     </div>
+    <div class="row-cols-1 m-2 p-2">
+        <p>El reporte parcial se generará con los datos guardados en la aplicación hasta este momento.</p>
+    </div>
     <form action="/generar-reporte" method="POST" >
         <div class="row-cols-1 m-2 p-2">
             <div class="form-group">
