Corrección de redirección del boton de calificaciones.

--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -28,7 +28,7 @@
                 </div>
                 <div class="card-footer">
                     <a href="/grupo/actividades/{{dataValues.idgrupo}}" class="btn btn-primary">Actividades</a>
-                    <a href="/grupo/calificaciones/{{dataValues.idgrupo}}/{{dataValues.id}}/0" class="btn btn-primary">Calificaciones</a>
+                    <a href="/grupo/calificaciones/{{dataValues.idgrupo}}/{{dataValues.id}}" class="btn btn-primary">Calificaciones</a>
                 </div>
             </div>
         </div>
