Corrección de redirección del boton de calificaciones.

--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -59,8 +59,8 @@
                     <input type="hidden" id="indiceReprobacionDataS2" value="{{dataReprobacionS2}}">
                     <div class="card-body">
                         <h5 class="card-title text-center">Indice de reprobación grupal</h5>
-                        <div id="indiceReprobacionS2" style="width: 100%; height: 250px;"></div>
-                        <div class="card-text">Alumnos Aprobados: {{aprobadosS2}} <br> Alumnos no aprobados: {{reprobadosS2}}</div>
+                        <div id="indiceReprobacionS2" style="width: 100%; height: 200px;"></div>
+                        <div  style="font-size: 0.9rem;" class="card-text">Alumnos Aprobados: {{aprobadosS2}} <br> Alumnos no aprobados: {{reprobadosS2}}</div>
 
                     </div>
                 </div>
