Se eliminaron los iconos en la barra de navegación.

--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -100,9 +100,9 @@
             </div>
 
             <div class="row-cols-1 montserrat">
-                _______________________________________
                 <section class="extra-bold">
                     <br><br>
+                    <p>_______________________________________</p>
                     <p>ATENTAMENTE</p>
                     <div class="extra-light">
                         <p>Excelencia en Educación Tecnológica</p>
@@ -111,8 +111,8 @@
                 </section>
                 <section class="extra-bold">
                     <br><br>
-                    <p>Nombre</p>
-                    <p>Cargo</p>
+                    <p>{{nombreDocente}}</p>
+                    <p>Docente</p>
                 </section>
                 <section class="medium">
                     <br><br>
