Se eliminaron los iconos en la barra de navegación.

--- a/views/actividad/actividad-calificar-equipo.hbs
+++ b/views/actividad/actividad-calificar-equipo.hbs
@@ -35,7 +35,7 @@
                 <thead>
                 <tr>
                     <th data-field="nombre" data-sorteable="true">Nombre del Equipo</th>
-                    <th data-field="calificacion" id="calificacionEquipo" data-editable="true" data-editable-type="number"
+                    <th class="editable editable-click"  data-placeholder="Required" data-field="calificacion" id="calificacionEquipo" data-editable="true" data-editable-type="number"
                         data-editable-min="0" data-editable-max="100" data-editable-emptytext="0">Calificación
                     </th>
                 </tr>
@@ -59,7 +59,7 @@
                 <tr>
                     <th data-field="clave" data-sorteable="true">No. Control</th>
                     <th data-field="nombre" data-sorteable="true">Nombre del Alumno</th>
-                    <th data-field="calificacion" id="calificacionAlumno" data-editable="true" data-editable-emptytext="0" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación
+                    <th class="editable editable-click" data-field="calificacion" id="calificacionAlumno" data-editable="true" data-editable-emptytext="0" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación
                     </th>
                 </tr>
                 </thead>
@@ -68,7 +68,7 @@
             </table>
         </div>
         <div class="row p-3 d-flex flex-row-reverse">
-            <button class="btn btn-primary" type="submit" id="finalizar">Finalizar</button>
+            <button class="btn btn-primary" type="submit" id="finalizar">Guardar</button>
             <a class="btn btn-danger" href="/grupo/actividades/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}">Cancelar</a>
         </div>
     </form>
@@ -97,6 +97,12 @@
 
             tableAlumno.bootstrapTable('showColumn', 'calificacion');
             tableEquipo.bootstrapTable('hideColumn', 'calificacion');
+
+            $('#calificacionEquipo').editable({
+                validate: function(value) {
+                    if($.trim(value) == '') return 'This field is required';
+                }
+            });
         });
 
         tableAlumno.on('editable-save.bs.table', function (e, field, row, oldValue, $el) {
