--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -53,6 +53,13 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col">
+                                    <label for="tema" class="form-label">Tema</label>
+                                    <input type="text" class="form-control" id="tema" name="tema"
+                                           disabled value="{{nombreTema}}">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
                                     <label for="nombre" class="form-label">Nombre</label>
                                     <input type="text" class="form-control" id="nombre" name="nombre"
                                            disabled value="{{actividad.dataValues.nombre}}" required>
