--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,8 +12,9 @@
 
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
-    <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
     <script src="/js/bootstrap-table.js"></script>
+    <script src="/js/locale/bootstrap-table-es-MX.js"></script>
+    <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
     <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
     <script src="/js/raphael.js"></script>
     <script src="/js/morris.js"></script>
@@ -43,12 +44,20 @@
                 display: none !important;
             }
         }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+            line-height: 60px
+        }
     </style>
 
 
 </head>
 
-<body class="container-fluid">
+<body>
 
 <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar no-print sticky-top" id="navbar" style="background: #131418; width: 100vw;">
 
