Mejora de la pantalla de error.

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,12 @@
-Ah ocurrido un error y la aplicación no puede continuar :(
-
-{{error}}
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-4">Error</h1>
+        <p class="lead">A ocurrido un error que impide que la aplicación funcione de manera correcta.</p>
+        <hr class="my-4">
+        <p>Comunique el siguiente error detallando que es lo que estaba realizando para darle seguimiento:   </p>
+        <p>{{error}}</p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="/" role="button">Regresar al inicio</a>
+        </p>
+    </div>
+</div>
