--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -43,7 +43,7 @@
               novalidate>
             <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <div class="row-cols-1 ">
-                <div class="col-auto navbar-nav-scroll">
+                <div class="col-auto">
                     <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
                            data-search="true"
                            data-advanced-search="true" data-filter-control="true" name="table" data-editable="true">
