--- a/views/grupo/vista-inicio-grupo-lista.hbs
+++ b/views/grupo/vista-inicio-grupo-lista.hbs
@@ -1,5 +1,6 @@
 <title>{{asignatura}} {{clave}} - Inicio - Seguimiento de Estudiantes</title>
-<div class="row m-2 p-2 flex-grow-1 flex-shrink-0">
+<div class="row-cols-1 m2"><h2 class="display-5">Seleccionar {{#if alumnos}}alumno{{/if}}{{#if equipos}}equipo{{/if}}</h2></div>
+<div class="row flex-grow-1 flex-shrink-0">
     <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block sidebar navbar-nav-scroll">
         <div class="sidebar-sticky">
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
