--- a/views/grupo/vista-inicio-grupo-seleccion.hbs
+++ b/views/grupo/vista-inicio-grupo-seleccion.hbs
@@ -229,6 +229,7 @@
                             {{#each unidad}}
                                 <th data-field="calificacion.{{@index}}.califinalPreS2" class="column">{{dataValues.nombre}}</th>
                             {{/each}}
+                            <th data-field="califMateria" class="column">Calif. Final</th>
                         {{/if}}
                     </tr>
                     </thead>
